# POC_OpenGL_To_WebGL

./: .gitignore  CMakeLists.txt  README.md  install.bat  vcpkg.json
Loglib/: CMakeLists.txt  Loglib.vcxproj
Loglib/src/Loglib/: Log.cpp  Log.h
POC_OpenGL_To_WebGL/: CMakeLists.txt  POC_OpenGL_To_WebGL.vcxproj  triangle.frag  triangle.vert
POC_OpenGL_To_WebGL/Sources/: Shader.cpp  Shader.h  glad.c  glad.h  main.cpp
POC_OpenGL_To_WebGL/shader/: triangle.frag  triangle.vert  triangle.webgl.frag  triangle.webgl.vert
